crates/jarl-cli/tests/integration/snapshots/integration__comments__nolint_skip_file.snap
---
source: crates/jarl-cli/tests/integration/comments.rs
expression: "&mut\nCommand::new(binary_path()).current_dir(directory).arg(\"check\").arg(\".\").run().normalize_os_executable_name()"
---
success: true
exit_code: 0
----- stdout -----
All checks passed!

----- stderr -----

----- args -----
check .
