crates/jarl-cli/tests/integration/snapshots/integration__comments__nolint_start_end.snap
---
source: crates/jarl-cli/tests/integration/comments.rs
expression: "&mut\nCommand::new(binary_path()).current_dir(directory).arg(\"check\").arg(\".\").run().normalize_os_executable_name()"
---
success: false
exit_code: 1
----- stdout -----
warning: any_is_na
 --> test.R:7:1
  |
7 | any(is.na(x))
  | ------------- `any(is.na(...))` is inefficient.
  |
  = help: Use `anyNA(...)` instead.

warning: any_is_na
  --> test.R:16:5
   |
16 |     any(is.na(x))
   |     ------------- `any(is.na(...))` is inefficient.
   |
   = help: Use `anyNA(...)` instead.

Found 2 errors.
2 fixable with the `--fix` option.

----- stderr -----

----- args -----
check .
