crates/jarl-cli/tests/integration/snapshots/integration__comments__nolint_with_specific_rules.snap
---
source: crates/jarl-cli/tests/integration/comments.rs
expression: "&mut\nCommand::new(binary_path()).current_dir(directory).arg(\"check\").arg(\".\").run().normalize_os_executable_name()"
---
success: false
exit_code: 1
----- stdout -----
warning: any_is_na
  --> test.R:15:1
   |
15 | any(is.na(x))
   | ------------- `any(is.na(...))` is inefficient.
   |
   = help: Use `anyNA(...)` instead.

Found 1 error.
1 fixable with the `--fix` option.

----- stderr -----

----- args -----
check .
